# $Id$

Griffith ChangeLog
------------------
(c) 2005-2007  Vasco Nunes, Piotr Ożarowski

2007-09-06  Michael Jahn
	* save window state, position and size on windows systems
	* save selected quick filter criteria
	* fixed backup if path or filename contains special characters (like german umlauts)
	* use deflate for backup if available

2007-09-03  Vasco Nunes
	* Some documentations updates

---- 0.9.5 ---

2007-09-02  Piotr Ożarowski
	* Translation files synchronized with Rosetta
	  + new: Catalan, Norwegian Bokmal
	  + uptaded: Brazilian Portuguese, Cech, Dutch, French, German, Italian, Portuguese, Russian
	* Polish translation updated
	* Print cover function fixed (reportlab doesn't like unicode)

2007-09-02  Michael Jahn
	* added support for media type, collection and volume in HTML export plugin
	* added "auto-fixing" of config file values for defaults section

2007-09-01  Piotr Ożarowski
	* Respect medium and video codec's default value in add window (closes: #11864)
	* griffith.glade file converted to glade3 format

2007-09-01  Michael Jahn
	* Kino.de plugin updated
	* Fix encoding of --home argument

2007-09-01  Vasco Nunes
	* Several changes on loan e-mail reminder system:
		+ Loan E-mail reminder timeout implemented
		+ Support for TLS smtp auth handshaking
		+ Added smtp server port usage
		+ Added gmail smtp server support
	* 7arte movie plugin updated
	* Portuguese translation file updated

2007-08-31  Vasco Nunes
	* Brazilian portuguese translation file updated

2007-08-26  Piotr Ożarowski
	* Fix encoding problems in backup function

2007-08-23  Piotr Ożarowski
	* Export disc number instead of medium id in HTML export plugin

2007-08-16  Michael Jahn
	* IMDB-de plugin updated

---- 0.9.4 ---

2007-08-05  Piotr Ożarowski
	* FDb movie plugin updated

2007-08-04  Piotr Ożarowski
	* Removing tags function fixed
	* Copy all files from "data" subdirectory to the exported location in HTML export plugin
	  + add index.htm files to html_table{,s} templates